[package]
authors = ["Berkus Decker <berkus@madfire.net>"]
categories = []
description = """
Structured Secure Streams library.
"""
keywords = []
license = "BOOST 1.0"
name = "sss"
readme = "README.md"
repository = "https://github.com/metta-systems/libsss-rs"
version = "0.1.0"

[dependencies]
bus = "1.3.2"
rust_sodium = "0.5.0"
uia = { path = "../libuia-rs" }
