[package]
authors = ["Berkus Decker <berkus@madfire.net>"]
categories = []
description = """
Structured Secure Streams library.
"""
keywords = []
license = "BOOST 1.0"
name = "sss"
readme = "README.md"
repository = "https://github.com/metta-systems/libsss-rs"
version = "0.1.0"

[dependencies]
bus = "1.3.2"
docopt = "0.8.1"
log = "0.3.8"
rust_sodium = "0.5.0"
tokio-core = "0.1.10"

[dependencies.uia]
path = "../libuia-rs"
