[package]
authors = ["Berkus Decker <berkus+cargo@metta.systems>"]
categories = []
description = """
Structured Secure Streams library.
"""
keywords = []
license = "BOOST 1.0"
name = "sss"
readme = "README.md"
repository = "https://github.com/metta-systems/libsss-rs"
version = "0.1.0"
build = "build.rs"

[dependencies]
bus = "1.4.1"
log = "0.4.1"
rust_sodium = "0.8.0"
#sodalite = "0.3.0"
tokio-core = "0.1.17"
pnet = "0.21.0"
pnet_macros_support = "0.21.0"

[build-dependencies]
glob = "0.2.*"
syntex = "0.42" # keep syntex version in match with pnet_macros/Cargo.toml
pnet_macros = "0.21.0"
